--- a/place_info_clean_restaurant1.ipynb
+++ b/place_info_clean_restaurant1.ipynb
@@ -64,7 +64,7 @@
    ],
    "source": [
     "df[\"new_district\"] = df[\"district\"].str.split(\" \").str.get(3)\n",
-    "df[[\"district\",\"new_district\"]].head()\n",
+    "# df[[\"district\",\"new_district\"]].head()\n",
     "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "df[[\"total_rating\",\"new_rating\"]].head()\n",
+    "# df[[\"total_rating\",\"new_rating\"]].head()\n",
     "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "df[[\"total_reviews\",\"new_review\"]].head()\n",
+    "# df[[\"total_reviews\",\"new_review\"]].head()\n",
     "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
@@ -312,15 +312,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\3108347982.py:1: FutureWarning: The squeeze argument has been deprecated and will be removed in a future version. Append .squeeze(\"columns\") to the call to squeeze.\n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\3108347982.py:1: FutureWarning: The squeeze argument has been deprecated and will be removed in a future version. Append .squeeze(\"columns\") to the call to squeeze.\n",
       "\n",
       "\n",
       "  df_2 = pd.read_csv('Data/raw_data/restaurant/place_info/餐廳類別人工標記/餐廳類別縮減成15大.csv',index_col=0,squeeze=True)\n",
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\3108347982.py:2: FutureWarning: The squeeze argument has been deprecated and will be removed in a future version. Append .squeeze(\"columns\") to the call to squeeze.\n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\3108347982.py:2: FutureWarning: The squeeze argument has been deprecated and will be removed in a future version. Append .squeeze(\"columns\") to the call to squeeze.\n",
       "\n",
       "\n",
       "  df_3 = pd.read_csv('Data/raw_data/restaurant/place_info/餐廳類別人工標記/餐廳人工標記.csv',index_col=0,squeeze=True)\n",
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\3108347982.py:3: FutureWarning: The squeeze argument has been deprecated and will be removed in a future version. Append .squeeze(\"columns\") to the call to squeeze.\n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\3108347982.py:3: FutureWarning: The squeeze argument has been deprecated and will be removed in a future version. Append .squeeze(\"columns\") to the call to squeeze.\n",
       "\n",
       "\n",
       "  df_4 = pd.read_csv('Data/raw_data/restaurant/place_info/餐廳類別人工標記/餐廳人工標記2.csv',index_col=0,squeeze=True)\n"
@@ -334,43 +334,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c27574f2",
-   "metadata": {},
-   "source": [
-    "### 方法1 用dict更改"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9efcda19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 把原本的類別縮減成15大類別\n",
-    "Series_ = df[\"place_category\"].map(df_2.to_dict())\n",
-    "# # 把餐廳類別賦予15大類別\n",
-    "dict1 = Series_.to_dict()\n",
-    "dict2 = df_3.loc[:,\"標記\"].to_dict()\n",
-    "dict1.update(dict2)\n",
-    "# # 把其他類別更改成15大類別\n",
-    "dict3 = df_4.loc[:,\"標記\"].to_dict()\n",
-    "dict1.update(dict3)\n",
-    "# pd.Series(dict1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59676d81",
-   "metadata": {},
-   "source": [
-    "### 方法2 直接用Series更改"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "02b16723",
    "metadata": {},
    "outputs": [],
@@ -382,8 +347,7 @@
     "Series1.update(Series2)\n",
     "# 把其他類別更改成15大類別\n",
     "Series3 = df_4.loc[:,\"標記\"]\n",
-    "Series1.update(Series3)\n",
-    "# Series1"
+    "Series1.update(Series3)"
    ]
   },
   {
@@ -396,13 +360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2fee0bff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "總共有25145筆,30個columns\n"
+     ]
+    }
+   ],
    "source": [
     "df[\"new_place_category\"] = Series1\n",
-    "# df[[\"place_category\",\"new_place_category\"]].head()"
+    "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
   {
@@ -415,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7ed6955d",
    "metadata": {},
    "outputs": [],
@@ -425,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "6c44bd10",
    "metadata": {
     "scrolled": true
@@ -435,37 +407,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\603344031.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\603344031.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"new_place_category\"][df.loc[:,\"new_place_category\"]==\"臺菜\"] = \"台灣小吃/熱炒店\"\n",
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\603344031.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\603344031.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"new_place_category\"][df.loc[:,\"new_place_category\"]==\"臺菜/熱炒店\"] = \"台灣小吃/熱炒店\"\n",
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\603344031.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\603344031.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"new_place_category\"][df.loc[:,\"new_place_category\"]==\"中式\\r\"] = \"中式\"\n",
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\603344031.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\603344031.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"new_place_category\"][df.loc[:,\"new_place_category\"]==\"火鍋\\r\"] = \"火鍋\"\n",
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\603344031.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\603344031.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"new_place_category\"][df.loc[:,\"new_place_category\"]==\"酒吧\"] = \"酒吧/餐酒館\"\n",
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\603344031.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\603344031.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[\"new_place_category\"][df.loc[:,\"new_place_category\"]==\"酒吧/餐酒館\\r\"] = \"酒吧/餐酒館\"\n",
-      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_9972\\603344031.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\mason89823\\AppData\\Local\\Temp\\ipykernel_11632\\603344031.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -485,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "20cc39b3",
    "metadata": {},
    "outputs": [
@@ -510,16 +482,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "36d522c9",
-   "metadata": {},
-   "source": [
-    "### 方法1 str.split( )"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "a4694b02",
    "metadata": {},
    "outputs": [],
@@ -531,30 +495,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8dbefdec",
-   "metadata": {},
-   "source": [
-    "### 方法2 str.findall( )"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "2a3d4d54",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matchSeries = df[\"google_url\"].str.findall(\"(?<=3d|4d)\\d{2,}\\.\\d+\")\n",
-    "dfmatch = matchSeries.apply(pd.Series)\n",
-    "df[\"longitude\"] =  dfmatch.iloc[:,0]\n",
-    "df[\"latitude\"]  = dfmatch.iloc[:,1]\n",
-    "# df[[\"longitude\",\"latitude\"]].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "20aaedc3",
    "metadata": {},
    "outputs": [
@@ -575,26 +517,68 @@
    "id": "0d407788",
    "metadata": {},
    "source": [
-    "# Remove \"nan\" or \"x\" or \"X\""
+    "# Remove  \"x\" or \"X\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2935cad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "總共有24089筆,32個columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df[df[\"new_place_category\"] != \"X\"]\n",
+    "df = df[df[\"new_place_category\"] != \"x\"]\n",
+    "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11ea6603",
+   "metadata": {},
+   "source": [
+    "# Remove NaN from \"new_place_category\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "47251327",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "總共有20923筆,32個columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.dropna(subset=\"new_place_category\")\n",
+    "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "980f8d08",
+   "metadata": {},
+   "source": [
+    "# Remove NaN from \"opening_hours\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2935cad4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.dropna(subset=\"new_place_category\")\n",
-    "df = df.dropna(subset=\"opening_hours\")\n",
-    "df = df[df[\"new_place_category\"] != \"X\"]\n",
-    "df = df[df[\"new_place_category\"] != \"x\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "c7a8b489",
+   "id": "bd3e2883",
    "metadata": {},
    "outputs": [
     {
@@ -606,6 +590,7 @@
     }
    ],
    "source": [
+    "df = df.dropna(subset=\"opening_hours\")\n",
     "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
@@ -619,18 +604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "fc4d87d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop_duplicates(subset=['address', 'place_name'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "65d90f4f",
    "metadata": {},
    "outputs": [
     {
@@ -642,6 +617,7 @@
     }
    ],
    "source": [
+    "df = df.drop_duplicates(subset=['address', 'place_name'])\n",
     "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
@@ -655,18 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "0a792313",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[df.loc[:,\"total_reviews\"] > 30]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "76492a7c",
    "metadata": {},
    "outputs": [
     {
@@ -678,6 +644,7 @@
     }
    ],
    "source": [
+    "df = df[df.loc[:,\"total_reviews\"] > 30]\n",
     "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
@@ -691,18 +658,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "1fd746a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[df.loc[:,\"eat_in\"] == 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "808bf0c2",
    "metadata": {},
    "outputs": [
     {
@@ -714,6 +671,7 @@
     }
    ],
    "source": [
+    "df = df[df.loc[:,\"eat_in\"] == 1]\n",
     "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
@@ -727,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "e6bd428b",
    "metadata": {},
    "outputs": [],
@@ -753,12 +711,12 @@
     "df = df[~df[\"place_name\"].str.contains(\"定食8\")]\n",
     "df = df[~df[\"place_name\"].str.contains(\"忠青商行\")]\n",
     "df = df[~df[\"place_name\"].str.contains(\"興葉蚵仔煎\")]\n",
-    "# df = df[~df[\"place_name\"].str.contains(\"爭鮮\")] # 先不刪"
+    "df = df[~df[\"place_name\"].str.contains(\"爭鮮\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "6839aa8b",
    "metadata": {},
    "outputs": [
@@ -766,11 +724,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "總共有16207筆,32個columns\n"
+      "總共有16174筆,32個columns\n"
      ]
     }
    ],
    "source": [
+    "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30a68af7",
+   "metadata": {},
+   "source": [
+    "# Concate lost Restaurant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "44a641aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "總共有16182筆,31個columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfLost = pd.read_csv(\"Data/raw_data/restaurant/lost_restaurant.csv\")\n",
+    "df = df.drop(\"file_name_2\",axis=\"columns\")\n",
+    "df = df.rename(columns={\"opening_hours\":\"opening_hour\"})\n",
+    "dfLost = dfLost.rename(columns={\"new_latitude\":\"latitude\",\"new_longitude\":\"longitude\"})\n",
+    "df = pd.concat([df,dfLost])\n",
     "print(f'總共有{df.shape[0]}筆,{df.shape[1]}個columns')"
    ]
   },
@@ -784,12 +773,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "id": "226596e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('place_info_final_1216',index=None)"
+    "df.to_csv('place_info_final_1217.csv',index=None)"
    ]
   },
   {
@@ -817,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
