--- a/place_review_random_select1.ipynb
+++ b/place_review_random_select1.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "76fcf945",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "# 選300個檔案,每個檔案 評論 1~5星各1筆\n",
-    "file = os.listdir(\"raw_data/attraction/review_clean/\")\n",
+    "file = os.listdir(\"Data/raw_data/attraction/review/review_clean/\")\n",
     "# 隨機抽取30個整數,return nparray\n",
     "random_ = np.random.choice(len(file),1,replace=False)\n",
     "print(random_)"
@@ -167,6 +167,127 @@
     "dff = pd.read_csv(\"Data/raw_data/attraction/review/random_review_text_attraction.csv\",header=None)\n",
     "dff"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded8bede",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8c3e7950",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def regex_(str_):\n",
+    "    regex = r\"\\\\|\\n|[a-zA-Z]|\\(原始評論\\)|\\.|\\’|[\\u0800-\\u4e00]|\\(由 Google 提供翻譯\\)|[\\uAC00-\\uD7A3]\"\n",
+    "    strResult = re.sub(regex, \"\", str_)\n",
+    "    return strResult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c36005eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def randomselect(file,rating):\n",
+    "    try:\n",
+    "        random_ = np.random.choice(len(file),1)\n",
+    "        df = pd.read_csv(f\"raw_data/attraction/review_clean/{file[i]}\")\n",
+    "        SeriesReview = df[\"review_text\"][df.loc[:,\"personal_rating\"] == rating].sample(n=1)\n",
+    "        index_ = SeriesReview.index[0]        \n",
+    "        strResult = regex_(SeriesReview[index_])\n",
+    "        listReview.append({\n",
+    "            \"review_text\":strResult\n",
+    "        })\n",
+    "    except:\n",
+    "        randomselect(file,rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afdb35bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = os.listdir(\"Data/raw_data/attraction/review/review_clean/\")\n",
+    "folderPath = \"random_review_text_attraction\"    \n",
+    "\n",
+    "listReview=[]\n",
+    "ratinglist=[1,2,3,4,5]\n",
+    "\n",
+    "for rating in ratinglist:    \n",
+    "    random_ = np.random.choice(len(file),100,replace=False)    \n",
+    "    for i in random_:\n",
+    "        try:\n",
+    "            df = pd.read_csv(f\"raw_data/attraction/review_clean/{file[i]}\")\n",
+    "            SeriesReview = df[\"review_text\"][df.loc[:,\"personal_rating\"] == rating].sample(n=1)\n",
+    "            index_ = SeriesReview.index[0]        \n",
+    "            strResult = regex_(SeriesReview[index_])\n",
+    "            listReview.append({\n",
+    "                \"review_text\":strResult\n",
+    "            })\n",
+    "        except:\n",
+    "            randomselect(file,rating)\n",
+    "            \n",
+    "    df = pd.DataFrame(listReview)\n",
+    "    df.to_csv(f'raw_data/attraction/{folderPath}.csv',mode='a', header=False, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "275b839a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3871e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9507473",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32f2050f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c358336",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb957b02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -327,6 +448,14 @@
     "    count+=len(df)\n",
     "print(count)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01318005",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -345,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
