--- a/place_review_clean.ipynb
+++ b/place_review_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "bdc0c485",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "9177b6e0",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,8 @@
     "        df = df.dropna(subset=\"review_text\")\n",
     "        df = df.drop_duplicates(subset=[\"author_name\"])\n",
     "        df = df.drop_duplicates(subset=[\"review_text\"])\n",
-    "        series = df[\"review_text\"].str.findall(\"[\\u4e00-\\u9fa5]\")\n",
+    "        series = df[\"review_text\"].replace(\"老鼠\",\"蟑螂\")\n",
+    "        series = series.str.findall(\"[\\u4e00-\\u9fa5]\")\n",
     "        series = series.str.len()\n",
     "        df1 = df[series>10]\n",
     "        df1 = pd.DataFrame(df1)\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "7fe6fb77",
    "metadata": {},
    "outputs": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "44fd6bca",
    "metadata": {},
    "outputs": [],
@@ -84,7 +85,8 @@
     "        df = df.dropna(subset=\"review_text\")\n",
     "        df = df.drop_duplicates(subset=[\"author_name\"])\n",
     "        df = df.drop_duplicates(subset=[\"review_text\"])\n",
-    "        series = df[\"review_text\"].str.findall(\"[\\u4e00-\\u9fa5]\")\n",
+    "        series = df[\"review_text\"].replace(\"老鼠\",\"蟑螂\")\n",
+    "        series = series.str.findall(\"[\\u4e00-\\u9fa5]\")\n",
     "        series = series.str.len()\n",
     "        df1 = df[series>10]\n",
     "        df1 = pd.DataFrame(df1)\n",
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "77366714",
    "metadata": {},
    "outputs": [],
