--- a/place_review_clean.ipynb
+++ b/place_review_clean.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 184,
    "id": "bdc0c485",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os,re"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 189,
    "id": "9177b6e0",
    "metadata": {},
    "outputs": [],
@@ -30,22 +30,32 @@
     "    try:\n",
     "        df = pd.read_csv(f\"Data/raw_data/restaurant/review/review_raw/{i}\")\n",
     "        df = df.iloc[:,1:]\n",
+    "        # 刪沒寫評論只評星星\n",
     "        df = df.dropna(subset=\"review_text\")\n",
+    "        # 刪作者重複\n",
     "        df = df.drop_duplicates(subset=[\"author_name\"])\n",
+    "        # 刪評論重複,防範洗評論\n",
     "        df = df.drop_duplicates(subset=[\"review_text\"])\n",
-    "        series = df[\"review_text\"].replace(\"老鼠\",\"蟑螂\")\n",
-    "        series = series.str.findall(\"[\\u4e00-\\u9fa5]\")\n",
+    "        # 把所有老鼠字眼都換成蟑螂,因模型判斷不出有老鼠是壞事\n",
+    "        df[\"review_text\"] = df[\"review_text\"].str.replace(\"老鼠\",\"蟑螂\")\n",
+    "        # 把非中文或英文的篩選掉,並把有\"由 Google 提供翻譯\"篩選掉\n",
+    "        regex = r\"\\\\|\\n|\\.|\\’|[\\u0800-\\u4e00]|\\(由 Google 提供翻譯\\)|[\\uAC00-\\uD7A3]\"\n",
+    "        df[\"review_text\"] = df[\"review_text\"].apply(lambda strResult: re.sub(regex,\"\", strResult))\n",
+    "        # 把原始評論刪除,只留翻譯過後的中文\n",
+    "        df[\"review_text\"] = df[\"review_text\"].str.split(\"\\(原始評論\\)\").str.get(0)\n",
+    "        # 計算中文字數的長度,不計算標點符號\n",
+    "        series = df[\"review_text\"].str.findall(\"[\\u4e00-\\u9fa5]\")\n",
     "        series = series.str.len()\n",
-    "        df1 = df[series>10]\n",
-    "        df1 = pd.DataFrame(df1)\n",
-    "        df1.to_csv(f\"Data/raw_data/restaurant/review/review_clean/{i}\",index=None)\n",
+    "        # 只取中文字數大於10的評論\n",
+    "        df = df[series>10]\n",
+    "        df.to_csv(f\"Data/raw_data/restaurant/review/review_clean/{i}\",index=None)\n",
     "    except:\n",
     "        print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 190,
    "id": "7fe6fb77",
    "metadata": {},
    "outputs": [
@@ -73,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "44fd6bca",
+   "execution_count": 191,
+   "id": "9365e3c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,19 +95,21 @@
     "        df = df.dropna(subset=\"review_text\")\n",
     "        df = df.drop_duplicates(subset=[\"author_name\"])\n",
     "        df = df.drop_duplicates(subset=[\"review_text\"])\n",
-    "        series = df[\"review_text\"].replace(\"老鼠\",\"蟑螂\")\n",
-    "        series = series.str.findall(\"[\\u4e00-\\u9fa5]\")\n",
+    "        df[\"review_text\"] = df[\"review_text\"].str.replace(\"老鼠\",\"蟑螂\")\n",
+    "        regex = r\"\\\\|\\n|\\.|\\’|[\\u0800-\\u4e00]|\\(由 Google 提供翻譯\\)|[\\uAC00-\\uD7A3]\"\n",
+    "        df[\"review_text\"] = df[\"review_text\"].apply(lambda strResult: re.sub(regex,\"\", strResult))\n",
+    "        df[\"review_text\"] = df[\"review_text\"].str.split(\"\\(原始評論\\)\").str.get(0)\n",
+    "        series = df[\"review_text\"].str.findall(\"[\\u4e00-\\u9fa5]\")\n",
     "        series = series.str.len()\n",
-    "        df1 = df[series>10]\n",
-    "        df1 = pd.DataFrame(df1)\n",
-    "        df1.to_csv(f\"Data/raw_data/attraction/review/review_clean/{i}\",index=None)\n",
+    "        df = df[series>10]\n",
+    "        df.to_csv(f\"Data/raw_data/attraction/review/review_clean/{i}\",index=None)\n",
     "    except:\n",
     "        print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 192,
    "id": "77366714",
    "metadata": {},
    "outputs": [],
@@ -132,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
