--- a/place_review_clean.ipynb
+++ b/place_review_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "id": "bdc0c485",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 9,
    "id": "9177b6e0",
    "metadata": {},
    "outputs": [],
@@ -39,8 +39,10 @@
     "        # 把所有老鼠字眼都換成蟑螂,因模型判斷不出有老鼠是壞事\n",
     "        df[\"review_text\"] = df[\"review_text\"].str.replace(\"老鼠\",\"蟑螂\")\n",
     "        # 把非中文或英文的篩選掉,並把有\"由 Google 提供翻譯\"篩選掉\n",
-    "        regex = r\"\\\\|\\n|\\.|\\’|[\\u0800-\\u4e00]|\\(由 Google 提供翻譯\\)|[\\uAC00-\\uD7A3]\"\n",
-    "        df[\"review_text\"] = df[\"review_text\"].apply(lambda strResult: re.sub(regex,\"\", strResult))\n",
+    "#         regex = r\"\\\\|\\n|\\.|\\’|[\\u0800-\\u4e00]|\\(由 Google 提供翻譯\\)|[\\uAC00-\\uD7A3]\"\n",
+    "        # 只把換行符號,(由 Google 提供翻譯),\\刪掉\n",
+    "        regex = r\"\\\\|\\n|\\(由 Google 提供翻譯\\)\"\n",
+    "        df[\"review_text\"] = df[\"review_text\"].apply(lambda strResult: re.sub(regex,\" \", strResult))\n",
     "        # 把原始評論刪除,只留翻譯過後的中文\n",
     "        df[\"review_text\"] = df[\"review_text\"].str.split(\"\\(原始評論\\)\").str.get(0)\n",
     "        # 計算中文字數的長度,不計算標點符號\n",
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 10,
    "id": "7fe6fb77",
    "metadata": {},
    "outputs": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 11,
    "id": "9365e3c0",
    "metadata": {},
    "outputs": [],
@@ -96,8 +98,9 @@
     "        df = df.drop_duplicates(subset=[\"author_name\"])\n",
     "        df = df.drop_duplicates(subset=[\"review_text\"])\n",
     "        df[\"review_text\"] = df[\"review_text\"].str.replace(\"老鼠\",\"蟑螂\")\n",
-    "        regex = r\"\\\\|\\n|\\.|\\’|[\\u0800-\\u4e00]|\\(由 Google 提供翻譯\\)|[\\uAC00-\\uD7A3]\"\n",
-    "        df[\"review_text\"] = df[\"review_text\"].apply(lambda strResult: re.sub(regex,\"\", strResult))\n",
+    "#         regex = r\"\\\\|\\n|\\.|\\’|[\\u0800-\\u4e00]|\\(由 Google 提供翻譯\\)|[\\uAC00-\\uD7A3]\"\n",
+    "        regex = r\"\\\\|\\n|\\(由 Google 提供翻譯\\)\"\n",
+    "        df[\"review_text\"] = df[\"review_text\"].apply(lambda strResult: re.sub(regex,\" \", strResult))\n",
     "        df[\"review_text\"] = df[\"review_text\"].str.split(\"\\(原始評論\\)\").str.get(0)\n",
     "        series = df[\"review_text\"].str.findall(\"[\\u4e00-\\u9fa5]\")\n",
     "        series = series.str.len()\n",
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "id": "77366714",
    "metadata": {},
    "outputs": [],
@@ -122,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1431a84a",
+   "id": "c2563ccd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -144,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
